--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.srivatsava1 }}
-          password: ${{ secrets.dckr_pat_3JNZgBxkYjNVeUdi_DWjeOuhWTQ }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
@@ -27,7 +27,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.srivatsava1 }}/my-flask-app:latest
-            ${{ secrets.srivatsava1 }}/my-flask-app:${{ github.sha }} # Tag with commit SHA for unique versions
+            ${{ secrets.DOCKER_USERNAME }}/my-flask-app:latest
+            ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }} # Tag with commit SHA for unique versions
           cache-from: type=gha
           cache-to: type=gha,mode=max
